No immediate update when opening/closing material panels from the properties #113052

Closed
opened 2023-09-29 12:07:28 +02:00 by slwk1d · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-09-28 04:28, hash: ca9c6372c94c
Worked: (newest version of Blender that worked as expected)

Short description of error
When you open/close material panels from the Properties Editor, there is no immediate update (panels dont open on the node in the node editor) comapred to when opening/closing them from the node editor (panels do open in the Properties Editor in that case).

Exact steps for others to reproduce the error
Open/close the panels of a material from the properties.
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-09-28 04:28, hash: `ca9c6372c94c` Worked: (newest version of Blender that worked as expected) **Short description of error** When you open/close material panels from the Properties Editor, there is no immediate update (panels dont open on the node in the node editor) comapred to when opening/closing them from the node editor (panels do open in the Properties Editor in that case). **Exact steps for others to reproduce the error** Open/close the panels of a material from the properties. [Based on the default startup or an attached .blend file (as simple as possible)]
slwk1d added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-09-29 12:07:29 +02:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-29 12:20:55 +02:00
Philipp Oeser changed title from Lag when opening/closing material panels from the properties to No immediate update when opening/closing material panels from the properties 2023-09-29 12:21:22 +02:00

Redraw tag for node space should be added to material panels.

Redraw tag for node space should be added to material panels.
Iliya Katushenock removed the
Meta
Good First Issue
label 2023-09-29 12:27:24 +02:00
Philipp Oeser self-assigned this 2023-09-29 12:46:49 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-29 13:18:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113052
No description provided.