source/blender/editors/space_node/node_templates.cc
@@ -45,6 +45,8 @@
 
 #include "ED_undo.hh"
 
+#include "WM_api.hh"
+
 using blender::nodes::NodeDeclaration;
 
 namespace blender::ed::space_node {
@@ -775,6 +777,9 @@ static void node_panel_toggle_button_cb(bContext *C, void *panel_state_argv, voi
   panel_state->flag ^= NODE_PANEL_COLLAPSED;
 
   ED_node_tree_propagate_change(C, bmain, ntree);
+
+  /* Make sure panel state updates from the Properties Editor, too. */
+  WM_event_add_notifier(C, NC_SPACE | ND_SPACE_NODE_VIEW, nullptr);
 }
 
 static void ui_node_draw_panel(uiLayout &layout,
